--- a/app/src/main/res/layout/cardview_item_book.xml
+++ b/app/src/main/res/layout/cardview_item_book.xml
@@ -7,7 +7,8 @@
     android:layout_height="190dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp">
+    cardview:cardCornerRadius="4dp"
+    android:focusable="true">
 
 
     <LinearLayout
@@ -20,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
-            android:background="#2d2d2d"/>
+            android:background="#2d2d2d"
+            android:contentDescription="@string/todo" />
 
         <TextView
             android:id="@+id/book_title_id"
@@ -29,7 +31,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Book Title"/>
+            android:text="@string/book_title"/>
 
     </LinearLayout>
 
