--- a/app/src/main/res/layout/adapter_book.xml
+++ b/app/src/main/res/layout/adapter_book.xml
@@ -9,26 +9,28 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="103dp"
-        android:layout_height="130dp"
+        android:layout_height="104dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/tvBook"
         android:layout_width="272dp"
-        android:layout_height="45dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:text="@string/textview"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
